syntax = "proto2";
option java_package = "com.romanidze.codestats.protobuf";

message GitHubInfoRecord {

  required string ghRequestUser = 1;
  required double recordCreatedTime = 2;
  required string name = 3;
  required bool isStarred = 4;
  required string ownerLogin = 5;
  required string ownerType = 6;
  required bool fork = 7;
  required string createdAt = 8;
  required string updatedAt = 9;
  required string pushedAt = 10;
  required int64 size = 11;
  required int64 stargazersCount = 12;
  required int64 watchersCount = 13;
  required string language = 14;
  required bool hasIssues = 15;
  required bool hasProjects = 16;
  required bool hasDownloads = 17;
  required bool hasWiki = 18;
  required bool hasPages = 19;
  required int64 forksCount = 20;
  required bool archived = 21;
  required bool disabled = 22;
  required int64 openIssues = 23;

}